--- a/server/djangoapp/templates/base/base.html
+++ b/server/djangoapp/templates/base/base.html
@@ -14,7 +14,7 @@
 </head>
 
     <body>
-    <!--Add a nav bar here -->
+    <!--Add a nav bar heree -->
     {% include 'base/navbar.html' %}
 
     <div>
