--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+{% extends 'base/base.html' %}
 
-</head>
-    <body>
-    <!--Add review form here -->
-    </body>
-</html>
+{% block title %}Home{% endblock %}
+
+{% block content %}
+
+<h2>Add a review for {{dealer.full_name}}</h2>
+        <form action="{% url 'djangoapp:add_review' dealer.id%}" method="post">
+            <div class="form-group">
+    
+                  <div class="mb-3">
+                      <label for="content"><i>Use the space below to write your review.</i></label>
+                      <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+                  </div>
+    
+                  <div class="form-check">
+                      <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+                      <label class="form-check-label" for="purchasecheck">
+                          Check this box if you purchased a car from {{dealer.full_name}}
+                      </label>
+                  </div>
+                </br>
+                  <div class="mb-3" id="car-select" style="display: none;">
+                    <label for="car"><b>Select Vehicle: </b></label>
+                    <select name="car" id="car" class="form-select">
+                        <option value="" selected>(Model-Make-Year)</option> <!-- Empty option -->
+                        {% for car in cars %}
+                        <option value="{{car.id}}">{{car.name}}-{{car.make.name}}-{{car.year}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+    
+                  <div class="mb-3" id="date-select" style="display: none;">
+                      <label for="purchasedate"><b>Purchase Date: </b></label>
+                      <input class="date-own form-control datepicker" style="width: 300px;" type="text" name="purchasedate" id="purchasedate">
+                  </div>
+            </div>
+            {% csrf_token %}
+            <div>
+                <button class="btn btn-primary" type="submit">Submit</button>
+            </div>
+        </form>
+{% endblock %}
