--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
+{% extends 'base/base.html' %}
 
-    <body>
+{% block title %}Home{% endblock %}
 
-    <!--Add a nav bar here -->
+{% block content %}
+<a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer.id %}">Add Review</a>
+<br>
+<h2>Reviews for {{dealer.full_name}}</h2>
+<div class="container mb-3">
+    <div class="card-columns">
+        {% for review in reviews %}
+            <div class="card p-2">
+                {% if review.sentiment == "positive" %}
+                    <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" width=24>
+                {% elif review.sentiment == "negative" %}
+                    <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" width=24>
+                {% elif review.sentiment == "neutral" %}
+                    <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" width=24>
+                {% endif %}
+                <div class="card-body bg-light">
+                    <h6 class="card-title">{{review.car_make}}, {{review.car_model}} </h5>
+                    <h6 class="card-title">{{review.car_year}}</h5>
+                <p class="card-text">{{review.review}}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</div>
 
-    <!-- Add reviews as cards -->
-
-    </body>
-
-</html>
+{% endblock %}
